# bbtcompiler

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
apps/bbtcompiler/: CMakeLists.txt  Lexer.h  main.cpp
bbtcompiler/: Lexer.cpp  main.cpp
libs/bbtcompilerlib/: AST.cpp  AST.h  ASTJson.h  ASTVisitor.h  CMakeLists.txt  Expression.h  ExpressionVisitor.h  JsonVisitor.cpp  JsonVisitor.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ParserOld.cpp  ParserOld.h  Statement.h  SymbolTable.h  Token.h
tests/: testConfigureFile.h.in  testParser.cpp  testParserOld.cpp  testlexer.cpp  testsmain.cpp
tests/testData/parser/: assignment_expression.json  assignment_expression_with_init.json  assignment_expression_with_init.txt  binary_expression.json  binary_expression.txt  compound_statement.json  compound_statement.txt  print_statement.json  variable_declaration.json
